admin employee image problem and footer and navbar change

--- a/public/asset/app.css
+++ b/public/asset/app.css
@@ -5,12 +5,12 @@
     padding:0;
 }
 
-.company-logo{
+/* .company-logo{
     width:211px;
     height:50px;
     margin-top: 10px;
     margin-left: 20px;
-}
+} */
 .logo-back{
     width:240px;
     height:80px;
