client page edit

--- a/public/asset/app.css
+++ b/public/asset/app.css
@@ -39,11 +39,11 @@
     height:80px;
 	
 }
-hr {
+/* hr {
 	height:5px;
 	border-width:0;
 	background-color:#00A4BD;
-  }
+  } */
 
 
 .login__submit {
@@ -145,12 +145,12 @@ hr {
 	background: linear-gradient(90deg, #C7C5F4, #776BCC);		
 } */
 
-.container {
+/* .container {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
-}
+} */
 
 .screen {		
 	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
